force-app/main/default/objects/Proactive_Run_Detail__c/Proactive_Run_Detail__c.object-meta.xml
<CustomObject>
    <label>Proactive Run Detail</label>
    <nameField>
        <displayFormat>PRD-{000000}</displayFormat>
        <label>Proactive Run Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proactive Run Details</pluralLabel>
    <sharingModel>Read</sharingModel> 
</CustomObject>