force-app/main/default/objects/Proactive_Run_Detail__c/fields/Analysis_Workflow_Type__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Workflow_Type__c</fullName>
    <description>This field is used to populate the analysisWorkflowType value from Proactive</description>
    <label>Analysis Workflow Type</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>