force-app/main/default/objects/Proactive_Run_Detail__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>This field is used to populate the applicationName value from Proactive</description>
    <label>Application Name</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>