force-app/main/default/objects/Proactive_Run_Detail__c/fields/Bead_Chip_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Bead_Chip_Serial_Number__c</fullName>
    <description>This field is used to populate the beadChipBarcode value from Proactive</description>
    <label>Bead Chip Serial Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>