force-app/main/default/objects/Proactive_Run_Detail__c/fields/BS_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>BS_Run_ID__c</fullName>
    <description>Field to hold the Run ID of each run from runs returned section. This is further used in Update Proactive Data Quick action on PRD record.</description>
    <label>BS Run ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>