force-app/main/default/objects/Proactive_Run_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to a case record</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Proactive Run Details</relationshipLabel>
    <relationshipName>ProactiveRunDetails</relationshipName>
    <type>Lookup</type>
</CustomField>