force-app/main/default/objects/Proactive_Run_Detail__c/fields/Cluster_Density__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Density__c</fullName>
    <description>This field is populated with clusterDensityRead1 value from proactive</description>
    <label>Cluster Density</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>