force-app/main/default/objects/Proactive_Run_Detail__c/fields/Cluster_Density_Passing_Filter__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Density_Passing_Filter__c</fullName>
    <description>This field is used to populate the clusterDensityPFRead1 value from Proactive</description>
    <label>Cluster Density Passing Filter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>