force-app/main/default/objects/Proactive_Run_Detail__c/fields/Control_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Control_Software_Version__c</fullName>
    <description>This field is populated with controlSoftwareVersion value from proactive</description>
    <label>Control Software Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>