force-app/main/default/objects/Proactive_Run_Detail__c/fields/Custom_I2_Primer__c.field-meta.xml
<CustomField>
    <fullName>Custom_I2_Primer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to populate CustomIndexTwoPrimer value from Proactive</description>
    <label>Custom I2 Primer</label>
    <type>Checkbox</type>
</CustomField>