force-app/main/default/objects/Proactive_Run_Detail__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Field to hold the value of the enn from 1st Proactive response</description>
    <label>Environment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>