force-app/main/default/objects/Proactive_Run_Detail__c/fields/Error_Rate__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate__c</fullName>
    <description>This field is used to populate the errorRate value from Proactive</description>
    <label>Error Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>