force-app/main/default/objects/Proactive_Run_Detail__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <description>This field will be populated with the value firmwareVersion from Proactive</description>
    <label>Firmware Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>