force-app/main/default/objects/Proactive_Run_Detail__c/fields/First_Base_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>First_Base_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to populate the firstBaseConfirmation value from Proactive</description>
    <label>First Base Confirmation</label>
    <type>Checkbox</type>
</CustomField>