force-app/main/default/objects/Proactive_Run_Detail__c/fields/Flow_Cell_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Cell_Type__c</fullName>
    <description>This field is used to populate the flowcellType value from Proactive</description>
    <label>Flow Cell Type</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>