force-app/main/default/objects/Proactive_Run_Detail__c/fields/FPGA_Version__c.field-meta.xml
<CustomField>
    <fullName>FPGA_Version__c</fullName>
    <description>This field is populated from fpgaVersion which comes from proactive</description>
    <label>FPGA Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>