force-app/main/default/objects/Proactive_Run_Detail__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to hold the Installed Product from which the run is initiated</description>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Proactive Run Details</relationshipLabel>
    <relationshipName>Proactive_Run_Details</relationshipName>
    <type>Lookup</type>
</CustomField>