force-app/main/default/objects/Proactive_Run_Detail__c/fields/Loading_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Loading_Concentration__c</fullName>
    <description>This field will be populated with loadingConcentration from Proactive</description>
    <label>Loading Concentration (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>