force-app/main/default/objects/Proactive_Run_Detail__c/fields/LRM_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>LRM_Run_ID__c</fullName>
    <description>This field is used to populate the localRunManagerRunId value from Proactive</description>
    <label>LRM Run ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>