force-app/main/default/objects/Proactive_Run_Detail__c/fields/LRM_Version__c.field-meta.xml
<CustomField>
    <fullName>LRM_Version__c</fullName>
    <description>This field is used to populate the localRunManagerVersion value from Proactive</description>
    <label>LRM Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>