force-app/main/default/objects/Proactive_Run_Detail__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This field is created to hold the notes for each run&apos;s metrics to be entered by user on Proactive tab and also on the proactive run detail record</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>