force-app/main/default/objects/Proactive_Run_Detail__c/fields/Occupancy_Percent__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Percent__c</fullName>
    <description>This field is populated with occupancyPercent from Proactive</description>
    <label>Occupancy Percent (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>