force-app/main/default/objects/Proactive_Run_Detail__c/fields/Overall_Q3__c.field-meta.xml
<CustomField>
    <fullName>Overall_Q3__c</fullName>
    <description>This field is used to populate the gtq30Percent value from Proactive</description>
    <label>Overall Q30 (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>