force-app/main/default/objects/Proactive_Run_Detail__c/fields/Percent_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Percent_Aligned__c</fullName>
    <description>This field is used to populate the alignedPercent value from Proactive</description>
    <label>Percent Aligned (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>