force-app/main/default/objects/Proactive_Run_Detail__c/fields/Percent_Passing_Filter__c.field-meta.xml
<CustomField>
    <fullName>Percent_Passing_Filter__c</fullName>
    <description>This field is used to populate the percentPf value from Proactive</description>
    <label>Percent Passing Filter (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>