force-app/main/default/objects/Proactive_Run_Detail__c/fields/Proactive_Id__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Id__c</fullName>
    <description>This field holds the ID value from the Proactive 1st response</description>
    <label>Proactive Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>