force-app/main/default/objects/Proactive_Run_Detail__c/fields/Proactive_Link__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Link__c</fullName>
    <description>This field is used to populate the proactiveLink value from Proactive</description>
    <label>Proactive Link</label>
    <type>Url</type>
</CustomField>