force-app/main/default/objects/Proactive_Run_Detail__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>The category of the product which is linked to the installed product is stamped in this field</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HiSeq</fullName>
            </value>
            <value>
                <fullName>iSeq</fullName>
            </value>
            <value>
                <fullName>MiniSeq</fullName>
            </value>
            <value>
                <fullName>MiSeq</fullName>
            </value>
            <value>
                <fullName>NextSeq 500/550</fullName>
            </value>
            <value>
                <fullName>NextSeq 1000/2000</fullName>
            </value>
            <value>
                <fullName>NovaSeq</fullName>
            </value>
            <value>
                <fullName>Genotyping</fullName>
            </value>
            <value>
                <fullName>MA Scanners</fullName>
            </value>
            <value>
                <fullName>HiSeq HD</fullName>
            </value>
            <value>
                <fullName>HiSeq X</fullName>
            </value>
            <value>
                <fullName>NovaSeq X Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>