force-app/main/default/objects/Proactive_Run_Detail__c/fields/Q30_Read_2__c.field-meta.xml
<CustomField>
    <fullName>Q30_Read_2__c</fullName>
    <description>This field is used to populate the percentGtq30Read2 value from Proactive</description>
    <label>Q30 Read 2 (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>