force-app/main/default/objects/Proactive_Run_Detail__c/fields/Rapid_Run__c.field-meta.xml
<CustomField>
    <fullName>Rapid_Run__c</fullName>
    <description>This field is used to populate the rapidRunChemistry value from Proactive</description>
    <label>Rapid Run</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>