force-app/main/default/objects/Proactive_Run_Detail__c/fields/Read_Length__c.field-meta.xml
<CustomField>
    <fullName>Read_Length__c</fullName>
    <description>Field created to hold the Readlenght of each run</description>
    <label>Read Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>