force-app/main/default/objects/Proactive_Run_Detail__c/fields/RTA_Version__c.field-meta.xml
<CustomField>
    <fullName>RTA_Version__c</fullName>
    <description>This field is used to populate the rtaVersion value from Proactive</description>
    <label>RTA Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>