force-app/main/default/objects/Proactive_Run_Detail__c/fields/Run_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_End_Date__c</fullName>
    <description>This field holds the run&apos;s end date which is selected and saved by user from proactive UI</description>
    <label>Run End Date</label>
    <type>Date</type>
</CustomField>