force-app/main/default/objects/Proactive_Run_Detail__c/fields/Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Run_ID__c</fullName>
    <description>This field is used to populate the runId value from Proactive</description>
    <label>Run ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>