force-app/main/default/objects/Proactive_Run_Detail__c/fields/Run_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Management_Type__c</fullName>
    <description>This field is used to populate the runManagementType value from Proactive</description>
    <label>Run Management Type</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>