force-app/main/default/objects/Proactive_Run_Detail__c/fields/Run_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Start_Date__c</fullName>
    <description>This field holds the run&apos;s start date which is selected and saved by user from proactive UI</description>
    <label>Run Start Date</label>
    <type>Date</type>
</CustomField>