force-app/main/default/objects/Proactive_Run_Detail__c/fields/Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Status__c</fullName>
    <description>This field holds the status of the Run which is selected and save by the user from Proactive UI</description>
    <label>Run Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>