force-app/main/default/objects/Proactive_Run_Detail__c/fields/Secondary_Analysis_Mode__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Analysis_Mode__c</fullName>
    <description>This field is used to populate the secondaryAnalysisMode value from Proactive</description>
    <label>Secondary Analysis Mode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>