force-app/main/default/objects/Proactive_Run_Detail__c/fields/Secondary_Analysis_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Analysis_Workflow__c</fullName>
	<description>The field holds the value of secondaryAnalysisWorkflow from Proactive </description>
    <label>Secondary Analysis Workflow</label>
    <length>64</length>
    <type>Text</type>
</CustomField>