force-app/main/default/objects/Proactive_Run_Detail__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>This field holds the serial number of the installed product which initiated the runs</description>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>