force-app/main/default/objects/Proactive_Run_Detail__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <description>This field is used to populate the fcPosition and 
side value from Proactive conditionally</description>
    <label>Side</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>