force-app/main/default/objects/Proactive_Run_Detail__c/fields/System_Suite_Version__c.field-meta.xml
<CustomField>
    <fullName>System_Suite_Version__c</fullName>
    <description>This field is used to populate the systemSuiteVersion value from Proactive</description>
    <label>System Suite Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>