force-app/main/default/objects/Proactive_Run_Detail__c/fields/UCS_Version__c.field-meta.xml
<CustomField>
    <fullName>UCS_Version__c</fullName>
    <description>This field is used to populate the ucsVersion value from Proactive</description>
    <label>UCS Version</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>