force-app/main/default/objects/Proactive_Run_Detail__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies the parent work order</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Proactive Run Details</relationshipLabel>
    <relationshipName>ProactiveRun_Details</relationshipName>
    <type>Lookup</type>
</CustomField>