force-app/main/default/objects/Proactive_Run_Detail__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <description>This field is used to populate the yieldTotalG value from Proactive</description>
    <label>Yield (Gb)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>