force-app/main/default/objects/Proactive_Run_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Run_ID__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Proactive_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>